src/objects/Session_Booking__c.object
<CustomObject>
    <fields>
        <fullName>Attendee_Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;+ Attendee__r.Id ,    Attendee__r.Contact__r.FirstName + &quot; &quot; +  Attendee__r.Contact__r.LastName  ,&quot;_self&quot;)</formula>
        <label>Attendee Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee__c</fullName>
        <label>Attendee</label>
        <referenceTo>Attendee__c</referenceTo>
        <relationshipLabel>Session Bookings</relationshipLabel>
        <relationshipName>Session_Bookings</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Session__c</fullName>
        <label>Session</label>
        <referenceTo>Session__c</referenceTo>
        <relationshipLabel>Session Bookings</relationshipLabel>
        <relationshipName>Session_Bookings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Session Booking</label>
    <nameField>
        <displayFormat>SB-{00000000}</displayFormat>
        <label>Session Booking Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Session Bookings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>